examples/bugs/pm-20291/negative/example_two.compact
// This file is part of Compact.
// Copyright (C) 2025 Midnight Foundation
// SPDX-License-Identifier: Apache-2.0
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//  	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// test15: same signature, different return types - Boolean vs Field
module M15 {
  export circuit test15(n: Uint<8>): Boolean { return true; }
  export circuit test15(n: Uint<8>): Field { return 1; }
  export circuit call15a(): Boolean { return test15(1); }
  export circuit call15b(): Field { return test15(1); }
}

import M15;
export { call15a, call15b };